--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ p{
 }
 
 .filosofia{
- color:red;
+  color:red;
   font-family:serif;
   font-weight:bold;
   font-style:italic;
-  text-align:justify
+  text-align:justify;
 }
